# gitlanes

./: .env.example  .gitignore  CHANGELOG-NEXT.md  README.md  bun.lockb  index.html  metadata.json  package-lock.json  package.json  server.ts  tsconfig.json
docs/: RELEASING.md
docs/changelogs/: CHANGELOG-0.1.1.md
docs/superpowers/plans/: 2026-05-21-ai-provider-settings.md  2026-05-21-branch-context-menu.md  2026-05-21-commit-context-menu.md  2026-05-21-push-pull-fetch.md  2026-05-21-workspace-layout-resize.md  2026-05-22-release-and-updater.md  2026-05-22-terminal-pty.md  2026-05-26-branch-tag-sidebar.md
docs/superpowers/specs/: 2026-05-21-ai-provider-settings-design.md  2026-05-21-branch-context-menu-design.md  2026-05-21-commit-context-menu-design.md  2026-05-21-push-pull-fetch-design.md  2026-05-21-workspace-layout-resize-design.md  2026-05-22-release-and-updater-design.md  2026-05-22-terminal-pty-design.md  2026-05-26-branch-tag-sidebar-design.md
scripts/: release.sh
src/: App.tsx  index.css  main.tsx  tauriFetchShim.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: ai.rs  ai_settings.rs  lib.rs  main.rs  terminal.rs
src/components/: AiSettingsModal.tsx  CodeEditor.tsx  CommitContextMenu.tsx  CommitInputModal.tsx  DiffViewer.tsx  GitGraph.tsx  Resizer.tsx  TerminalPanel.tsx  UpdateModal.tsx  XTermView.tsx
