[package]
name = "gitlanes"
version = "0.1.0"
description = "Git GUI"
authors = ["muki"]
edition = "2021"

[lib]
name = "gitlanes_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
anyhow = "1"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
thiserror = "2"
ignore = "0.4"
